# perry-rust

./: .gitignore  Cargo.toml  Procfile  TODO  askama.toml  db.toml-sample  justfile
.cargo/: config.toml
db/: Cargo.toml
db/src/: export.rs  images.rs  import.rs  json.rs  main.rs
import/: Cargo.toml
import/src/: db.rs  import.rs  main.rs  test.rs
migrations/: 20241119130701_init.sql  20241119130702_init2.sql  20241119131356_cover_url_column.sql
src/: banner_info.rs  config.rs  cookies.rs  db.rs  email.rs  entities.rs  errors.rs  import_database.rs  logic.rs  login.rs  main.rs  perrypedia.rs  response.rs  templates.rs  url.rs
src/pages/: api.rs  cycle.rs  cycles.rs  edit.rs  logic.rs  mod.rs  pending.rs  summaries.rs
static/: createAccount.html
static/css/: style.css  summary.css
static/js/: common.js  displayCycle.js  displayPending.js  test.js
templates/: a.html  border.html  cycle.html  cycles.html  edit_summary.html  header-login.html  header.html  pending.html  summary.html
web/: Cargo.toml  Procfile  TODO  tree.txt
web/src/: actix.rs  config.rs  constants.rs  covers.rs  db.rs  email.rs  entities.rs  errors.rs  import_database.rs  logic.rs  login.rs  main.rs  perrypedia.rs  response.rs  test.json  test.rs
web/src/actix/: cookies.rs  mod.rs
web/src/axum/: cookie.rs  mod.rs  response.rs
web/src/pages/: cycle.rs  cycles.rs  edit.rs  mod.rs  pending.rs  summaries.rs
web/static/: admin.html  createPassword.html  login.html  pending.html  requestAccount.html
web/static/css/: login.css
web/static/js/: addCycle.js  common.js  displaySummary.js  editSummary.js
web/templates/: b.html  cycle.html  cycles.html  edit_summary.html  email-summary.html  header-login.html  insert_cycle.html  pending.html  summary.html
