[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = { version = "0.10.19", features = [ "env", "toml" ] }
serde = { version = "1.0.211", features = [ "derive" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.21", features = [ "derive" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "runtime-tokio-rustls" ] }
tokio = { version ="1.41.1", features = [ "macros", "rt-multi-thread" ] }
image = { version = "0.25.5", features = [ "jpeg"] }
rayon = "1.10.0"
