[package]
name = "perry"
version = "0.1.0"
edition = "2021"
default-run = "perry"

[dependencies]

axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1", features = [ "cookie"] }
cookie = "0.18.1"
tower-http = { version = "0.6.6", features = [ "fs", "trace" ] }

sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.47.1", features = [ "macros" , "rt-multi-thread"] }
bon = "3.7.2"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [ "env-filter" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.143"
askama = "0.14.0"
figment = { version = "0.10.19", features = [ "env", "toml", "json" ] }
async-trait = "0.1.89"
reqwest = "0.12.23"
regex = "1.11.2"
chrono = "0.4.41"
sha2 = { version = "0.10.8", features = ["default"] }
uuid = { version = "1.18.1", features = ["v4"] }
lettre = "0.11.18"
dotenv = "0.15.0"
image = "0.25.6"
http = "1.3.1"